<resources>
    <string name="app_name">Remind Me</string>
    <string name="text_reminders_empty">No text reminders found!</string>
    <string name="notification_reminders_empty">No notification reminders found!</string>

    <string name="notif_reminders_empty">No reminders found!</string>

    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="new_reminder">New</string>
    <string name="text_reminders">Text Reminders</string>
    <string name="notification_reminders">Notification Reminders</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>

    <string-array name="text_statuses">
        <item>Pending</item>
        <item>Send success!</item>
        <item>Send failed!</item>
    </string-array>

    <string-array name="reminder_statuses">
        <item>Inactive</item>
        <item>Active</item>
    </string-array>

    <string-array name="importance">
        <item>Normal</item>
        <item>Priority</item>
    </string-array>

    <string-array name="time_intervals">
        <item>None</item>
        <item>Daily</item>
        <item>Every two days</item>
        <item>Weekly</item>
        <item>Every Two Weeks</item>
        <item>Every Three Weeks</item>
        <item>Every Four Weeks</item>
    </string-array>



    <string-array name="colour_names">
        <item>Aqua</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Red</item>
        <item>White</item>
        <item>Yellow</item>
    </string-array>
\
    /*  These are being used as IDs */
    <string-array name="colour_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>


    <string-array name="activities">
        <item>Text Reminders</item>
        <item>Notification Reminders</item>
    </string-array>

    <string name="text_reminder">Text Reminders</string>
    <string name="notification_reminder">Notification Reminders</string>

    <string name="imp_reminder">Important Reminder!</string>


    <string name="label_title">Title:</string>
    <string name="label_due_date">Reminder Date:</string>
    <string name="label_priority">Priority:</string>
    <string name="label_status">Status:</string>
    <string name="label_message">Message:</string>
    <string name="label_to">To:</string>
    <string name="label_recurrence">Repeat reminder:</string>

    <string name="label_importance">Importance:</string>
    <string name="label_colour">Notification colour:</string>

    <string name="conf_del_title">Delete Confirmation</string>
    <string name="conf_del_text">Are you sure you want to delete this reminder?</string>
    <string name="conf_del_yes">Yes</string>
    <string name="conf_del_no">No</string>

    <string name="err_phone_number_blank">Error: Phone number cannot be blank</string>
    <string name="err_title_blank">Error: Title cannot be blank</string>
    <string name="err_message_blank">Error: Message cannot be blank</string>
    <string name="err_due_date">Error: Date cannot be in the past</string>
    <string name="err_due_date_blank">Error: Date cannot be blank</string>
    <string name="err_due_time_blank">Error: Time cannot be blank</string>
    <string name="err_reminder_not_found">Error: Reminder not found</string>
    <string name="err_phone_number_invalid">Error: Invalid phone number</string>

    <string name="conf_update">Reminder updated</string>
    <string name="conf_create">Reminder added</string>
    <string name="conf_del_success">Reminder deleted</string>
    <string name="conf_tr_title">Text Reminder</string>
    <string name="conf_tr_sent">Text reminder successfully sent to </string>
    <string name="conf_tr_sent2">Text reminder sent!</string>

    <string name="msg_tr_failed">Some reminders did not send :(</string>


    <string name="pref_gen_header">General</string>
    <string name="pref_tr_header">Text Reminder</string>
    <string name="pref_hr_header">Notification Reminder</string>
    <string name="prefs_tr_notif_enable_sum">Enables notifications for when a text reminder is sent</string>
    <string name="prefs_tr_notif_enable_title">Text Reminder Sent Notifications</string>
    <string name="prefs_select_sound">Select notification tone</string>
    <string name="prefs_title_sound">Sound</string>
    <string name="prefs_title_vibrate">Vibrate</string>
    <string name="prefs_tr_vibrate_sum">Enable vibrate for notifications when a text reminder is sent</string>
    <string name="prefs_nr_notif_enable_sum">Enables notifications for when a reminder is sent</string>
    <string name="prefs_nr_notif_enable_title">Reminder Notifications</string>
    <string name="prefs_nr_vibrate_sum">Enable vibrate for notifications</string>
    <string name="prefs_select_colour">Light Colour</string>
    <string name="default_act_title">Default View</string>



    <string name="test_long_text">The quick brown fox jumped over the slow lazy dog.  The quick brown fox jumped over the slow lazy dog.</string>

</resources>
