<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_new" android:title="@string/new_reminder"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="ifRoom" android:orderInCategory="100"></item>

    <item android:id="@+id/action_save" android:title="@string/done"
        android:icon="@drawable/ic_done_white_24dp"
        app:showAsAction="always" android:orderInCategory="110"></item>

    <item android:id="@+id/action_cancel" android:title="@string/cancel"
        android:icon="@drawable/ic_clear_white_24dp"
        app:showAsAction="always" android:orderInCategory="120"></item>

    <item android:id="@+id/action_delete" android:title="@string/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="always" android:orderInCategory="130"></item>

    <item android:id="@+id/action_tm" android:title="@string/text_reminders"
        app:showAsAction="never" android:orderInCategory="200"></item>

    <item android:id="@+id/action_nm" android:title="@string/notification_reminders"
        app:showAsAction="never" android:orderInCategory="210"></item>

    <item android:id="@+id/action_fav" android:title="@string/favourites"
        app:showAsAction="never" android:orderInCategory="220"></item>

    <item android:id="@+id/action_settings" android:title="@string/settings"
        app:showAsAction="never" android:orderInCategory="230"></item>

</menu>