<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.comp3617.finalproject.meggsage.TextReminderActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_to"
            android:layout_weight="1"  />

        <EditText
            android:layout_height="wrap_content"
            android:id="@+id/editTo"
            android:layout_width="0dip"
            android:layout_weight="2" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/label_due_date"
            android:layout_weight="3" />

        <EditText
            android:layout_width="0dip"
            android:layout_gravity="fill_horizontal"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:id="@+id/editDate"
            android:layout_weight="4" />

        <EditText
            android:layout_width="0dip"
            android:layout_gravity="fill_horizontal"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:id="@+id/editTime"
            android:layout_weight="2" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_title"
            android:layout_weight="1" />

        <EditText
            android:layout_height="wrap_content"
            android:id="@+id/editTitle"
            android:layout_weight="2"
            android:layout_width="0dip"
            android:layout_gravity="fill_horizontal"
            android:inputType="text" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_status"
            android:layout_weight="1" />

        <Spinner
            android:layout_width="0dip"
            android:layout_gravity="fill_horizontal"
            android:layout_height="wrap_content"
            android:id="@+id/spStatuses"
            android:entries="@array/reminder_statuses"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_message" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_gravity="fill_vertical"
            android:id="@+id/editMessage"
            android:gravity="top"
            android:inputType="text"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>
